--- a/src/assets/styles/pages/AboutUs/AboutUs.module.scss
+++ b/src/assets/styles/pages/AboutUs/AboutUs.module.scss
@@ -1,24 +1,27 @@
 .hero {
   width: 100%;
+  height: 95vh;
   position: relative;
+  font-family: "Inter";
   .hero_image {
     left: 0;
     top: 0;
     width: 100%;
-    height: 100%;
+    object-fit: cover;
+    height: 90vh;
     position: absolute;
     z-index: -5;
   }
   .back {
     position: absolute;
     width: 100%;
-    height: 100%;
+    height: 90vh;
     opacity: 0.4;
     background-image: linear-gradient(to right, #16665e, #737373);
   }
   .hero_box {
     margin-left: 5.2vw;
-    margin-top: 14vw;
+    margin-top: 10vw;
     margin-bottom: 23vw;
     z-index: 6;
     position: relative;
@@ -87,7 +90,7 @@
   }
 
   .swiper_container {
-    width: 30vw;
+    width: 40vw;
     margin: 0 auto;
     margin-top: 5vw;
   }
@@ -113,6 +116,7 @@
     justify-content: space-between;
     align-items: center;
     .text {
+      font-family: "Inter";
       width: 66vw;
       font-size: 1.8vw;
       font-weight: bold;
