--- a/src/assets/styles/components/CarCard.module.scss
+++ b/src/assets/styles/components/CarCard.module.scss
@@ -183,6 +183,7 @@
 
 @media screen and (max-width: 768px) {
   .carCardItem {
+    width: 44vw;
     border-radius: 12px;
     margin-right: 15px;
     padding: 15px;
