--- a/src/assets/styles/pages/PageNotFound/PageNotFound.module.scss
+++ b/src/assets/styles/pages/PageNotFound/PageNotFound.module.scss
@@ -3,10 +3,9 @@
   justify-content: center;
   align-items: center;
   width: 100%;
-  height: 100%;
+  height: 85vh;
   flex-direction: column;
   font-family: "Gotham Pro";
-  height: 100%;
   text-align: center;
   @media screen and (max-width: 728px) {
     margin-top: 150px;
