--- a/src/assets/styles/components/CarCard.module.scss
+++ b/src/assets/styles/components/CarCard.module.scss
@@ -1,5 +1,9 @@
 .carCardItem {
-  width: 31vw;
+  height: 100%;
+  // width: 31vw;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
   position: relative;
   flex-shrink: 0;
   border-radius: 15px;
@@ -31,7 +35,6 @@
     display: flex;
     flex-wrap: wrap;
     width: 100%;
-    min-height: 165px;
     align-content: flex-start;
     margin-bottom: 19px;
     margin-top: 19px;
@@ -65,7 +68,6 @@
     align-items: center;
     justify-content: space-between;
     margin-top: 20px;
-    
 
     .car_price {
       color: #19746b;
