--- a/src/assets/styles/components/Loader.scss
+++ b/src/assets/styles/components/Loader.scss
@@ -7,6 +7,13 @@
   text-align: center;
 }
 
+.wrapper{
+  display: flex;
+  justify-content: center;
+  height: 100vh;
+  width: 100vw;
+}
+
 .lds-dual-ring:after {
   content: " ";
   display: block;
