--- a/src/assets/styles/pages/AboutUs/AboutUs.module.scss
+++ b/src/assets/styles/pages/AboutUs/AboutUs.module.scss
@@ -153,18 +153,17 @@
         display: block;
         .card_item {
           width: 70%;
+          margin: 0 auto;
+          text-align: center;
           &:not(:last-child){
             margin-bottom: 4vw;
-          }
-          &:nth-child(2){
-            margin-left: 30%;
           }
           img {
             width: 100%;
           }
           div {
             font-size: 3vw;
-            text-align: left;
+            text-align: center;
           }
         }
       }
