add header phone link

--- a/src/assets/styles/components/BurgerMenu.module.scss
+++ b/src/assets/styles/components/BurgerMenu.module.scss
@@ -83,6 +83,9 @@
   z-index: 100;
   transform: translateX(100%);
   border-bottom-left-radius: 30px;
+  a{
+    color: #000;
+  }
   p{
     display: flex;
     justify-content: flex-end;
