--- a/src/assets/styles/components/OverNavbar.module.scss
+++ b/src/assets/styles/components/OverNavbar.module.scss
@@ -9,6 +9,9 @@
     flex-direction: row-reverse ;
     font-family: "Gotham Pro";
     font-weight: bold;
+    a{
+      color: #000;
+    }
     p{
       display: flex;
       gap: 10px;
