button style is changed to bigger

--- a/src/assets/styles/pages/AboutUs/AboutUs.module.scss
+++ b/src/assets/styles/pages/AboutUs/AboutUs.module.scss
@@ -138,6 +138,12 @@
     .hero_box {
       margin-left: 7vw;
       margin-top: 18vw;
+
+      button{
+        padding: 0.5rem 1.5rem;
+        border-radius: 1vw;
+        font-size: 4vw;
+      }
     }
   }
   .about_main {
