--- a/src/assets/styles/pages/CardInfo/CardInfo.module.scss
+++ b/src/assets/styles/pages/CardInfo/CardInfo.module.scss
@@ -2,7 +2,28 @@
   width: 90vw;
   margin: 0 auto;
   font-family: "Montserrat";
-  margin-top: 50px;
+  margin-top: 30px;
+  .back {
+    display: flex;
+    align-items: center;
+    gap: 8px;
+    padding-bottom: 30px;
+    p {
+      font-weight: 700;
+      font-size: 22px;
+      color: #000000;
+    }
+    @media screen and (max-width: 1024px) {
+      margin-top: 60px;
+    }
+    @media screen and (max-width: 425px) {
+      margin-top: 10px;
+      padding-bottom: 15x;
+      p {
+        font-size: 16px;
+      }
+    }
+  }
   .card_slide_block {
     display: flex;
     justify-content: space-between;
@@ -29,7 +50,6 @@
             height: 45vw;
             width: 100%;
           }
-       
         }
         button {
           position: absolute;
