Share function is added

--- a/src/assets/styles/pages/CardInfo/CardInfo.module.scss
+++ b/src/assets/styles/pages/CardInfo/CardInfo.module.scss
@@ -181,6 +181,9 @@
     align-items: center;
     margin-top: 2vw;
     font-size: 2vw;
+    &:hover{
+      cursor: pointer;
+    }
     span {
       margin-left: 1vw;
     }
