add some functionality to filtration

--- a/src/assets/styles/pages/Catalog/Catalog.module.scss
+++ b/src/assets/styles/pages/Catalog/Catalog.module.scss
@@ -369,3 +369,24 @@
     }
   }
 }
+
+// ------------ for scrolling --------- //
+
+.select {
+  position: relative;
+}
+
+.select .options_container {
+  max-height: 120px;
+  overflow-y: auto;
+  background-color: #fff;
+}
+
+.option {
+  padding: 8px;
+  cursor: pointer;
+}
+
+.option:hover {
+  background-color: #f0f0f0;
+}
