--- a/src/assets/styles/pages/Home/FirstBlock.module.scss
+++ b/src/assets/styles/pages/Home/FirstBlock.module.scss
@@ -105,7 +105,7 @@
     font-size: 40px;
     font-weight: 400;
     text-align: center;
-    span {
+    h1 {
       &:first-child {
         font-size: 40px;
         color: rgb(19, 209, 190);
@@ -139,7 +139,7 @@
   .title {
     font-size: 6.4vw;
 
-    span {
+    h1 {
       &:first-child {
         font-size: 6.4vw;
       }
