--- a/src/assets/styles/pages/AboutUs/AboutUs.module.scss
+++ b/src/assets/styles/pages/AboutUs/AboutUs.module.scss
@@ -75,7 +75,7 @@
         img {
           width: 100%;
         }
-        div {
+        article {
           width: 90%;
           margin: 0 auto;
           margin-top: 2.4vw;
@@ -167,7 +167,7 @@
           img {
             width: 100%;
           }
-          div {
+          article {
             font-size: 3vw;
             text-align: center;
           }
