--- a/src/assets/styles/pages/CardInfo/CardInfo.module.scss
+++ b/src/assets/styles/pages/CardInfo/CardInfo.module.scss
@@ -4,6 +4,7 @@
   font-family: "Montserrat";
   margin-top: 30px;
   .back {
+    width: fit-content;
     display: flex;
     align-items: center;
     gap: 8px;
@@ -116,7 +117,8 @@
       background-color: #eaeaea;
       border-radius: 1.7vw;
 
-      h1 {
+      h1,
+      .car_price {
         font-size: 2.6vw;
         font-family: "Montserrat";
       }
@@ -181,7 +183,7 @@
     align-items: center;
     margin-top: 2vw;
     font-size: 2vw;
-    &:hover{
+    &:hover {
       cursor: pointer;
     }
     span {
@@ -231,7 +233,7 @@
   }
 }
 
-@media screen and (max-width: 767px) {
+@media screen and (max-width: 768px) {
   .card_info_section {
     margin-top: 70px;
     .card_slide_block {
@@ -264,7 +266,8 @@
         height: auto;
         padding: 2vw;
 
-        h1 {
+        h1,
+        .car_price {
           font-size: 4.5vw;
         }
 
