--- a/src/assets/styles/pages/CardInfo/CardInfo.module.scss
+++ b/src/assets/styles/pages/CardInfo/CardInfo.module.scss
@@ -255,6 +255,8 @@
         }
 
         .card_slide_list {
+          // background-color: red;
+
           .card_slide_item {
             width: 25vw;
           }
@@ -332,3 +334,5 @@
     }
   }
 }
+
+
