--- a/src/assets/styles/pages/CardInfo/CardInfo.module.scss
+++ b/src/assets/styles/pages/CardInfo/CardInfo.module.scss
@@ -96,7 +96,6 @@
           &:hover {
             cursor: pointer;
           }
-
           img {
             height: 8vw;
             border-radius: 20px;
@@ -255,8 +254,6 @@
         }
 
         .card_slide_list {
-          // background-color: red;
-
           .card_slide_item {
             width: 25vw;
           }
@@ -333,6 +330,19 @@
       }
     }
   }
+} 
+
+@media screen and (max-width: 490px) {
+  .card_info_section {
+    .card_slide_block {
+      .card_info_card {
+        .car_struct_list {
+          .car_struct_list_item {
+            padding: 1.5vw 2vw;
+            font-size: 3.5vw;
+          }
+        }
+      }
+    }
+  }
 }
-
-
