--- a/src/assets/styles/pages/Home/FirstBlock.module.scss
+++ b/src/assets/styles/pages/Home/FirstBlock.module.scss
@@ -101,7 +101,7 @@
 
   .title {
     width: 30rem;
-    font-family: Inter;
+    font-family: "Inter";
     font-size: 40px;
     font-weight: 400;
     text-align: center;
@@ -109,8 +109,11 @@
       &:first-child {
         font-size: 40px;
         color: rgb(19, 209, 190);
-        padding-right: 0.5rem;
+        padding-right: 0.4rem;
       }
+      display: inline;
+    }
+    p{
       display: inline;
     }
   }
