--- a/src/assets/styles/ui/LangSwitcher.module.scss
+++ b/src/assets/styles/ui/LangSwitcher.module.scss
@@ -3,6 +3,7 @@
   padding: 5px;
 
   button {
+    font-family: "Montserrat";
     padding-left: 10px;
     background-color: transparent;
     display: flex;
