--- a/src/assets/styles/components/OverNavbar.module.scss
+++ b/src/assets/styles/components/OverNavbar.module.scss
@@ -7,7 +7,7 @@
     align-items: center;
     gap: 60px;
     flex-direction: row-reverse ;
-    font-family: "Gotham Pro";
+    font-family: "Montserrat";
     font-weight: bold;
     a{
       color: #000;
