--- a/src/assets/styles/layout/Header.module.scss
+++ b/src/assets/styles/layout/Header.module.scss
@@ -31,7 +31,7 @@ header {
       button {
         background-color: transparent;
         font-size: inherit;
-        font-family: "Gotham Pro";
+        font-family: "Montserrat";
         color: #000;
         border: none;
         &::after {
@@ -52,7 +52,7 @@ header {
         }
       }
       a {
-        font-family: "Gotham Pro";
+        font-family: "Montserrat";
         color: #000;
         line-height: 20px;
         &::after {
