--- a/src/assets/styles/components/CarCard.module.scss
+++ b/src/assets/styles/components/CarCard.module.scss
@@ -1,6 +1,5 @@
 .carCardItem {
   height: 100%;
-  // width: 31vw;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
@@ -9,7 +8,7 @@
   border-radius: 15px;
   background: #fff;
   margin-right: 20px;
-  font-family: "Montserrat";
+  font-family: "Inter";
   padding: 25px;
   background-color: #e5e5e1;
   list-style: none;
