--- a/src/assets/styles/layout/Footer.module.scss
+++ b/src/assets/styles/layout/Footer.module.scss
@@ -1,7 +1,7 @@
 footer {
   padding-bottom: 2vh;
   background-color: #00241b;
-  font-family: "Montserrat";
+  font-family: "Inter";
   margin-top: 50px;
   .logo {
     width: 90%;
@@ -40,7 +40,7 @@ footer {
 
       ul li {
         color: #fff;
-        font-family: "Montserrat";
+        font-family: "Inter";
         font-size: 1.2rem;
         margin-bottom: 1vw;
         font-style: normal;
