--- a/src/assets/styles/pages/CardInfo/CardInfo.module.scss
+++ b/src/assets/styles/pages/CardInfo/CardInfo.module.scss
@@ -1,7 +1,7 @@
 .card_info_section {
   width: 90vw;
   margin: 0 auto;
-  font-family: "Montserrat";
+  font-family: "Inter";
   margin-top: 30px;
   .back {
     width: fit-content;
@@ -119,7 +119,7 @@
       h1,
       .car_price {
         font-size: 2.6vw;
-        font-family: "Montserrat";
+        font-family: "Inter";
       }
       .car_price {
         margin-top: 1.5vw;
