--- a/src/assets/styles/pages/Filtration/FiltrationPage.module.scss
+++ b/src/assets/styles/pages/Filtration/FiltrationPage.module.scss
@@ -43,7 +43,7 @@
   padding: 0 10px 0 21px;
 
   p {
-    font-family: Montserrat;
+    font-family: "Inter";
     font-weight: 600;
   }
 }
@@ -92,7 +92,7 @@
 
   p {
     color: rgb(102, 102, 102);
-    font-family: Montserrat;
+    font-family: "Inter";
   }
 }
 
@@ -180,7 +180,7 @@
   padding: 0 10px 0 16px;
 
   p {
-    font-family: Montserrat;
+    font-family: "Inter";
     font-weight: 400;
   }
 }
@@ -337,7 +337,7 @@
     font-size: 20px;
     font-weight: 600;
     margin-top: 0;
-    font-family: Montserrat;
+    font-family: "Inter";
   }
 
   .main-title {
