--- a/src/assets/styles/layout/Header.module.scss
+++ b/src/assets/styles/layout/Header.module.scss
@@ -23,36 +23,63 @@ header {
   .col_6 {
     display: flex;
     align-items: center;
+    .logo_btn {
+      svg {
+        width: 100%;
+      }
+    }
+    @media screen and (max-width: 1024px) {
+      &:first-child {
+        width: 20%;
+      }
+    }
     .Links {
-      margin-left: 30px;
       display: flex;
       align-items: center;
-      gap: 20px;
+      gap: 40px;
       button {
         background-color: transparent;
-        font-size: inherit;
-        font-family: "Montserrat";
+        font-size: 20px;
         color: #000;
         border: none;
+        @media screen and (max-width: 1440px) {
+          font-size: 16px;
+        }
+        @media screen and (max-width: 1080px) {
+          font-size: 14px;
+        }
+        @media screen and (max-width: 860px) {
+          font-size: 12px;
+        }
+      }
+      .header_phone {
+        p {
+          display: flex;
+          align-items: center;
+          gap: 10px;
+          border: 0;
+        }
         &::after {
           transition: all 0.5s;
           display: block;
           content: " ";
-          height: 1px;
+          height: 0;
           width: 0;
         }
         &:hover {
           &::after {
             content: " ";
             transition: all 0.3s;
-            width: 100%;
-            height: 1px;
+            width: 0;
+            height: 0;
             background-color: #19746b;
           }
         }
       }
       a {
-        font-family: "Montserrat";
+        font-family: "Inter";
+        font-weight: 400;
+        font-size: 20px;
         color: #000;
         line-height: 20px;
         &::after {
@@ -71,6 +98,21 @@ header {
             background-color: #19746b;
           }
         }
+        @media screen and (max-width: 1440px) {
+          font-size: 16px;
+        }
+        @media screen and (max-width: 1080px) {
+          font-size: 14px;
+        }
+        @media screen and (max-width: 860px) {
+          font-size: 12px;
+        }
+      }
+      @media screen and (max-width: 1366px) {
+        gap: 20px;
+      }
+      @media screen and (max-width: 1080px) {
+        gap: 15px;
       }
     }
   }
