--- a/src/assets/styles/pages/Home/GreetingBlock.module.scss
+++ b/src/assets/styles/pages/Home/GreetingBlock.module.scss
@@ -20,13 +20,11 @@
 
 .button {
   border: none;
-  font-size: 3rem;
-  font-size: 1.5vw;
-  width: 19vw;
-  padding: 0.4em;
+  font-size: 1.2vw;
+  padding: .5vw 3.5vw;
   border: 3px solid #19746b;
   color: #19746b;
-  border-radius: 10px;
+  border-radius: .5vw;
   float: right;
   font-weight: 400;
   transition: all 0.2s;
@@ -39,15 +37,15 @@
 }
 
 .title {
-  font-size: 1.8vw;
+  font-size: 1.7vw;
   font-weight: 700;
   font-family: "Inter";
 }
 
 .text {
   font-family: "Inter";
-  font-size: 1.5vw;
-  margin: 20px 0 65px 0;
+  font-size: 1.2vw;
+  margin: 1vw 0 3.5vw 0;
   width: 40vw;
 }
 
@@ -63,7 +61,7 @@
 
   .col_6 {
     width: 100%;
-    margin-top: 70px;
+    margin-top: 40px;
   }
 
   .button {
@@ -96,43 +94,18 @@
   }
 
   .button {
-    width: 60%;
-    font-size: 5vw;
+    width: unset;
+    font-size: 14px;
     margin-top: 15px;
-    padding: 0.4em;
+    padding: 5px 50px;
   }
 
   .title {
-    font-size: 7vw;
+    font-size: 15px;
   }
 
   .text {
-    font-size: 5vw;
-    margin: 10px 0;
-  }
-}
-@media screen and (max-width: 320px) {
-  .container {
-    width: 90%;
-  }
-
-  .col_6 {
-    width: 100%;
-  }
-
-  .button {
-    width: 60%;
-    font-size: 5vw;
-    margin-top: 15px;
-    padding: 0.4em;
-  }
-
-  .title {
-    font-size: 6vw;
-  }
-
-  .text {
-    font-size: 5vw;
+    font-size: 13px;
     margin: 10px 0;
   }
 }
