--- a/src/assets/styles/pages/PageNotFound/PageNotFound.module.scss
+++ b/src/assets/styles/pages/PageNotFound/PageNotFound.module.scss
@@ -5,7 +5,7 @@
   width: 100%;
   height: 85vh;
   flex-direction: column;
-  font-family: "Gotham Pro";
+  font-family: "Inter";
   text-align: center;
   @media screen and (max-width: 728px) {
     margin-top: 150px;
