--- a/src/assets/styles/ui/LangSwitcher.module.scss
+++ b/src/assets/styles/ui/LangSwitcher.module.scss
@@ -3,22 +3,29 @@
   padding: 5px;
 
   button {
-    font-family: "Montserrat";
-    padding-left: 10px;
+    font-family: "Inter" !important;
+    padding-left: 15px;
     background-color: transparent;
     display: flex;
     align-items: center;
     gap: 10px;
     border: none;
-    font-size: 20px;
     .langArrow {
       margin-left: 50px;
+      @media screen and (max-width: 1024px) {
+        margin-left: 20px;
+      }
+      @media screen and (max-width: 860px) {
+        margin-left: 10px;
+      }
+      @media screen and (max-width: 768px) {
+        margin-left: 30px;
+      }
     }
     div {
       img {
         width: 100%;
         height: 100%;
-        vertical-align: text-top;
       }
     }
     @media screen and (max-width: 1440px) {
@@ -42,11 +49,10 @@
     z-index: 100;
     position: absolute;
     width: 100%;
-    transition: all .3s;
+    transition: all 0.3s;
     box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
-
     button {
-      background-color: #f9f9f9;
+      background-color: #f5f7f2 !important;
       border-radius: 7px;
       padding-right: 5vw;
       width: 100%;
@@ -62,7 +68,7 @@
 .dropdown_content_show {
   opacity: 1 !important;
   visibility: visible !important;
-  transition: all .3s;
+  transition: all 0.3s;
 }
 
 .langArrow_active {
