--- a/src/assets/styles/components/BurgerMenu.module.scss
+++ b/src/assets/styles/components/BurgerMenu.module.scss
@@ -6,7 +6,6 @@
   padding: 15px;
   z-index: 99;
   width: 100%;
-
 }
 
 .row {
@@ -17,8 +16,12 @@
     align-items: center;
     &:first-child{
       width: 25%;
-      svg{
-        width: 100%;
+      button{
+        color: #19746B;
+        font-size: 24px;
+        @media screen and (max-width: 490px) {
+          font-size:20px;
+        }
       }
       @media screen and (max-width: 540px) {
         width: 40%;
@@ -56,7 +59,6 @@
 .menu_content {
   transition: all 0.4s;
   box-shadow: 0px 5px 5px 0px rgba(0, 0, 0, 0.25);
-
   padding: 20px;
   height: 100%;
   display: flex;
