--- a/src/assets/styles/layout/Header.module.scss
+++ b/src/assets/styles/layout/Header.module.scss
@@ -24,9 +24,9 @@ header {
     display: flex;
     align-items: center;
     .logo_btn {
-      svg {
-        width: 100%;
-      }
+      font-size: 28px;
+      color: #19746B;
+      font-family: "Inter";
     }
     @media screen and (max-width: 1024px) {
       &:first-child {
@@ -36,7 +36,7 @@ header {
     .Links {
       display: flex;
       align-items: center;
-      gap: 40px;
+      gap: 50px;
       button {
         background-color: transparent;
         font-size: 20px;
@@ -59,22 +59,8 @@ header {
           gap: 10px;
           border: 0;
         }
-        &::after {
-          transition: all 0.5s;
-          display: block;
-          content: " ";
-          height: 0;
-          width: 0;
-        }
-        &:hover {
-          &::after {
-            content: " ";
-            transition: all 0.3s;
-            width: 0;
-            height: 0;
-            background-color: #19746b;
-          }
-        }
+      
+       
       }
       a {
         font-family: "Inter";
@@ -82,22 +68,6 @@ header {
         font-size: 20px;
         color: #000;
         line-height: 20px;
-        &::after {
-          transition: all 0.5s;
-          display: block;
-          content: " ";
-          height: 1px;
-          width: 0;
-        }
-        &:hover {
-          &::after {
-            content: " ";
-            transition: all 0.3s;
-            width: 100%;
-            height: 1px;
-            background-color: #19746b;
-          }
-        }
         @media screen and (max-width: 1440px) {
           font-size: 16px;
         }
@@ -109,10 +79,10 @@ header {
         }
       }
       @media screen and (max-width: 1366px) {
-        gap: 20px;
+        gap: 40px;
       }
       @media screen and (max-width: 1080px) {
-        gap: 15px;
+        gap: 30px;
       }
     }
   }
