--- a/src/assets/styles/layout/Footer.module.scss
+++ b/src/assets/styles/layout/Footer.module.scss
@@ -64,6 +64,7 @@ footer {
 
   #madeby {
     text-align: center;
+    font-family: Inter;
     margin-top: 20px;
     color: #fff;
     font-weight: lighter;
