--- a/src/assets/styles/pages/Catalog/Catalog.module.scss
+++ b/src/assets/styles/pages/Catalog/Catalog.module.scss
@@ -50,40 +50,24 @@
       display: flex;
       align-items: center;
       justify-content: space-between;
-      width: 28vw;
-      height: 45px;
+      width: 35vw;
       cursor: pointer;
-      border-radius: 0.5rem;
-      background: rgb(255, 255, 255);
-      padding: 0 10px 0 21px;
+      border-radius: 8px;
+      border: 1px solid #000;
+      background: #eaeaea;
+      box-shadow: 4px 4px 4px 0px rgba(0, 0, 0, 0.25);
+      padding: 10px 10px 10px 21px;
       margin: 0 auto;
       @media screen and (max-width: "768px") {
         width: 100%;
       }
       p {
         font-weight: 600;
+        font-size: 20px;
       }
     }
 
-    .filtration_open {
-      display: flex;
-      align-items: center;
-      justify-content: space-between;
-      cursor: pointer;
-      margin: 0 auto;
-      width: 28vw;
-      height: 45px;
-      border-radius: 0.5rem;
-      border: 1px solid black;
-      background: rgb(255, 255, 255);
-      padding: 0 10px 0 21px;
-      @media screen and (max-width: "768px") {
-        width: 100%;
-      }
-      p {
-        font-weight: 600;
-      }
-    }
+   
   }
 
   .rotates {
@@ -107,7 +91,7 @@
     background: rgb(255, 255, 255);
 
     p {
-      font-size: 13px;
+      font-size: 14px;
       color: rgb(102, 102, 102);
     }
   }
@@ -267,10 +251,10 @@
         gap: 10px;
         flex-direction: column;
       }
-      .country{
+      .country {
         order: -1;
       }
-      .mileage{
+      .mileage {
         order: 1;
       }
     }
@@ -279,7 +263,7 @@
       width: 100%;
 
       p {
-        font-size: 12px;
+        font-size: 14px;
       }
     }
 
@@ -296,14 +280,14 @@
       background: rgb(255, 255, 255);
 
       p {
-        font-size: 12px;
+        font-size: 14px;
         color: rgb(102, 102, 102);
       }
     }
 
     .row_input {
       input {
-        font-size: 12px;
+        font-size: 14px;
         width: 44vw;
         padding: 10px;
       }
@@ -325,25 +309,15 @@
 
       .filtration {
         gap: 5px;
-        height: 35px;
+
         border-radius: 5px;
-        padding: 8px;
+        padding: 10px;
         border: 1px solid rgb(204, 203, 203);
         p {
-          font-size: 13px;
+          font-size: 16px;
         }
       }
 
-      .filtration_open {
-        gap: 5px;
-        height: 35px;
-        border-radius: 5px;
-        padding: 8px;
-        border: 1px solid rgb(204, 203, 203);
-        p {
-          font-size: 13px;
-        }
-      }
     }
 
     .types_car {
@@ -379,8 +353,11 @@
 
     .select {
       border: 1px solid rgb(226, 225, 225);
+      padding: 10px;
+      overflow: scroll;
       p {
-        font-size: 12px;
+        padding: 7px 0;
+        font-size: 14px;
         font-weight: 200;
       }
     }
