--- a/src/assets/styles/ui/LangSwitcher.module.scss
+++ b/src/assets/styles/ui/LangSwitcher.module.scss
@@ -3,8 +3,9 @@
   padding: 5px;
 
   button {
-    font-family: "Inter" !important;
+    font-family: "Inter" ;
     padding-left: 15px;
+    color: #000;
     background-color: transparent;
     display: flex;
     align-items: center;
