--- a/src/assets/styles/pages/Home/GreetingBlock.module.scss
+++ b/src/assets/styles/pages/Home/GreetingBlock.module.scss
@@ -2,7 +2,6 @@
   width: 90%;
   margin: 0 auto;
 }
-
 .row {
   display: flex;
   align-items: center;
@@ -43,8 +42,8 @@
 }
 
 .text {
-  font-family: "Gotham Pro";
-  font-size: 1.5vw;
+  font-family: "Inter";
+  font-size: 1.4vw;
   margin: 20px 0 65px 0;
   width: 40vw;
 }
@@ -77,13 +76,27 @@
     margin: 10px 0;
   }
   .title {
-    font-size: 1.9rem;
+    font-size: 1.8rem;
   }
   .text {
     font-size: 4vw;
   }
 }
-
+@media screen and (max-width: 700px) {
+  .title {
+    font-size: 1.7rem;
+  }
+}
+@media screen and (max-width: 690px) {
+  .title {
+    font-size: 1.6rem;
+  }
+}
+@media screen and (max-width: 600px) {
+  .title {
+    font-size: 1.5rem;
+  }
+}
 @media screen and (max-width: 480px) {
   .container {
     width: 90%;
@@ -101,7 +114,7 @@
   }
 
   .title {
-    font-size: 7vw;
+    font-size: 5vw;
   }
 
   .text {
