--- a/src/assets/styles/layout/Header.module.scss
+++ b/src/assets/styles/layout/Header.module.scss
@@ -24,9 +24,12 @@ header {
     display: flex;
     align-items: center;
     .logo_btn {
-      font-size: 28px;
+      font-size: 35px;
       color: #19746B;
       font-family: "Inter";
+      @media screen and (max-width: 1440px) {
+        font-size: 28px;
+      }
     }
     @media screen and (max-width: 1024px) {
       &:first-child {
