webp images, delete unused images, add geeks logo

--- a/src/assets/styles/pages/AboutUs/AboutUs.module.scss
+++ b/src/assets/styles/pages/AboutUs/AboutUs.module.scss
@@ -3,7 +3,7 @@
   position: relative;
   font-family: "Inter";
   margin-bottom: 20px;
-  background-image: url(@images/2016-bmw-m2-202-1585760824.jpg);
+  background-image: url(@images/2016-bmw-m2-202-1585760824.webp);
   background-size: cover;
   background-position: right;
   height: 91vh;
