--- a/src/assets/styles/pages/Home/FirstBlock.module.scss
+++ b/src/assets/styles/pages/Home/FirstBlock.module.scss
@@ -2,7 +2,7 @@
   justify-content: space-between;
   display: flex;
   padding-block: 90px;
-  background-image: url(@images/FirstBlock.png);
+  background-image: url(@images/FirstBlock.webp);
   background-size: cover;
   background-position: center;
   height: 91vh;
@@ -70,7 +70,7 @@
     padding-bottom: 50px;
     display: flex;
     position: relative;
-    background-image: url(@images/hero_mobile_bg.png);
+    background-image: url(@images/hero_mobile_bg.webp);
     background-size: cover;
     background-position: right;
     background-repeat: no-repeat;
